--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="try.css" />
 </head>
 <body>
 <div id="menu">
+<ul>
+<img src=smile.jpg style="float:left" class="avatar"/>
 <li><a href="#about">About Me</a></li>
 <li><a href="#photos">My Photos</a></li>
 <li><a href="#playlist">My Playlist</a></li>
 <li><a href="#like">Like</a></li>
 <li><a href="#qrcoder">QR code</a></li>
 <li><a href="#spa">Q&A</a></li>
-<li><a href="#contact">Contact Me</a></li>
+<li style="float:right"><a href="#contact">Contact Me</a></li>
+</ul>
 </div>
-		  
+<section id="head of header" class="section">
+<br/>
+<br/>
+<h3>
+Web-Development-Environments-2021/assignment1-OmriMan
+</h3>
+<img src=img5.jpg class="responsive"/><img src=img7.jpg class="responsive"/><img src=img6.jpg class="responsive"/>
+</section>	  
 <section id="about" class="section">
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+<h1>
 about me
+</h1>
+<h2>
+My name is Sara
+</h2>
 <br/>
 <br/>
 <br/>
@@ -54,7 +55,9 @@ about me
 <br/>
 <br/>
 <br/>
+<h1>
 my photos
+</h1>
 <br/>
 <br/>
 <br/>
@@ -77,7 +80,9 @@ my photos
 <br/>
 <br/>
 <br/>
+<h1>
 my playlist
+</h1>
 <br/>
 <br/>
 <br/>
@@ -100,7 +105,9 @@ my playlist
 <br/>
 <br/>
 <br/>
+<h1>
 give me a like
+</h1>
 <br/>
 <br/>
 <br/>
@@ -123,7 +130,9 @@ give me a like
 <br/>
 <br/>
 <br/>
+<h1>
 scan my code
+</h1>
 <br/>
 <br/>
 <br/>
@@ -146,7 +155,9 @@ scan my code
 <br/>
 <br/>
 <br/>
+<h1>
 ans
+</h1>
 <br/>
 <br/>
 <br/>
@@ -169,7 +180,9 @@ ans
 <br/>
 <br/>
 <br/>
+<h1>
 contact me
+</h1>
 <br/>
 <br/>
 <br/>
