--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <li><a href="#like">Like</a></li>
 <li><a href="#qrcoder">QR code</a></li>
 <li><a href="#spa">Q&A</a></li>
+<li style="float:right"><a><div class="fb-like" data-href="https://web-development-environments-2021.github.io/assignment1-OmriMan/" data-width="100" data-layout="button" data-action="like" data-size="large" data-share="true"></div> </a></li>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v13.0" nonce="eg2BO3O7"></script>
 <li style="float:right"><a href="#contact">Contact Me</a></li>
 </ul>
 </div>
@@ -20,45 +23,45 @@
 <br/>
 <br/>
 <h3>
-Web-Development-Environments-2022/assignment1-OmriMan
+  Hi !
 </h3>
-<img src=img5.jpg class="responsive"/><img src=img7.jpg class="responsive"/><img src=img6.jpg class="responsive"/>
 </section>	  
 <section id="about" class="section">
-<br/>
-<br/>
-<h1>
-about me
-</h1>
-<h2>
-My name is Sara
-</h2>
-<br/>
-<br/>
-<br/>
+  <br/>
+  <br/>
+  <h1>
+    about me
+  </h1>
+  <h2>
+    My name is Sara
+  </h2>
+  <br/>
+  <br/>
+  <br/>
 </section>
 
 <section id="photos" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<h1>
-my photos
-</h1>
-<br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <h1>
+    my photos
+  </h1>
+  <img src=img5.jpg class="responsive"/><img src=img7.jpg class="responsive"/><img src=img6.jpg class="responsive"/>
+  <br/>
 <br/>
 <br/>
 </section>
