--- a/index.html
+++ b/index.html
@@ -97,23 +97,17 @@ my playlist
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
 <h1>
 give me a like
+<br/>
+<div class="fb-like" data-href="https://web-development-environments-2021.github.io/assignment1-OmriMan/" data-layout="button" data-action="like" data-size="large" data-share="false"></div>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v13.0" nonce="eg2BO3O7"></script>
+<div class="fb-like" data-href="https://web-development-environments-2021.github.io/assignment1-OmriMan/" data-width="" data-layout="button" data-action="recommend" data-size="large" data-share="true"></div>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v13.0" nonce="XSMBJ2HT"></script>
+<br/>
 </h1>
-<br/>
-<br/>
-<br/>
 </section>
 
 <section id="qrcoder" class="section">
@@ -122,23 +116,7 @@ give me a like
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<h1>
-scan my code
-</h1>
-<br/>
-<br/>
-<br/>
+<h1>scan my code <br/> <img src=QR.jpg class="QR"/></h1>
 </section>
 
 <section id="spa" class="section">
