--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <div id="menu">
 <ul>
-<img src=smile.jpg style="float:left" class="avatar"/>
+<img src=face.jpg style="float:left" class="avatar"/>
 <li><a href="#about">About Me</a></li>
 <li><a href="#photos">My Photos</a></li>
 <li><a href="#playlist">My Playlist</a></li>
@@ -30,10 +30,11 @@
   <br/>
   <br/>
   <h1>
+    <img src=sleep_avatar.jpeg style="float:left" class="avatar"/>
     about me
   </h1>
   <h2>
-    My name is Sara
+    My name is Ivar
   </h2>
   <br/>
   <br/>
@@ -60,8 +61,42 @@
   <h1>
     my photos
   </h1>
-  <img src=img5.jpg class="responsive"/><img src=img7.jpg class="responsive"/><img src=img6.jpg class="responsive"/>
-  <br/>
+  <div class="row">
+    <div class="column">
+      <img src="WhatsApp Video 2022-04-20 at 13.55.55.gif">
+      <img src="la_familia.jpeg">
+      <img src="hilik.jpg">
+      <img src="PHOTO-2021-07-17-16-32-00.jpg">
+      <img src="sleep.jpg">
+      <img src="jump_tsaly.jpg">
+      <img src="sweetie.jpg">
+      <img src="GIF-2022-04-20-13-55-54.gif">
+    </div>
+    <div class="column">
+      <img src="play_gif.gif">
+      <img src="sleepp.jpeg">
+      <img src="tinder.jpeg">
+      <img src="play_hilik.jpg">
+      <img src="jump_tsaly1.jpg">
+      <img src="pipi.jpg">
+      <img src="rrr.jpeg">
+      <img src="rest.jpg">      
+    </div>
+    <div class="column">
+      <img src="GIF-2022-04-20-13-54-15.gif">
+      <img src="buuny.jpeg">
+      <img src="GIF-2022-04-20-13-55-26.gif">
+      <img src="GIF-2022-04-20-13-55-10.gif">
+      <img src="play_hilik1.jpg">
+    </div>
+    <div class="column">
+      <img src="birthday.jpg">
+      <img src="cool.jpg">
+      <img src="mom.jpeg">
+      <img src="GIF-2022-04-20-13-55-18.gif">
+      <img src="GIF-2022-04-20-13-56-54.gif">
+    </div>
+  </div>
 <br/>
 <br/>
 </section>
