--- a/index.html
+++ b/index.html
@@ -21,22 +21,49 @@
 </div>
 <section id="head of header" class="section">
 <br/>
-<br/>
 <h3>
-  Hi !
+  <br/>
+  <br/>
+  <img src=s1.jpeg class="avatar_header"/><img src=s2.jpeg class="avatar_header"/><img src=s3.jpeg class="avatar_header"/><img src=s4.jpeg class="avatar_header"/><img src=s5.jpeg class="avatar_header"/><img src=s6.jpeg class="avatar_header"/><img src=s7.jpeg class="avatar_header"/>
 </h3>
 </section>	  
 <section id="about" class="section">
   <br/>
   <br/>
   <h1>
-    <img src=sleep_avatar.jpeg style="float:left" class="avatar"/>
     about me
   </h1>
   <h2>
-    My name is Ivar
+    <p>Hello bitches, my name is <u>Ivar</u><br/>I'm a year and a half old. My family broke up when I was two and a half<br/>months oldand I do not know where my biological siblings are<img src=old_times.jpeg class="avatar_text"/>
+      <br/><img src=momi.jpg class="avatar_text"/>Koral ("Korahel")and Ran<img src=dad.jpeg class="avatar_text"/> took me under their wing and now I have a prince's life!
+    <br/><u>I have 3 stepbrothers:</u>
+    <br/><img src=hilik_f1.jpg class="avatar_text"/>Hilik (German Shepherd) <img src=face_hilik.jpg class="avatar_text"/><br/>
+    <img src=Inkedshula_love_LI.jpg class="avatar_text"/>Shula (Boston Terrier)<img src=sul.jpeg class="avatar_text"/><br/>
+    <img src=hatul_f1.jpg class="avatar_text"/>"Hatul"  RIP (Gangster Cat)<img src=hatul_face.jpg class="avatar_text"/></p>
+    <br/>
+    <p><u>Something interesting that is important to know about me:</u>
+    <br/>I was born right at the beginning of the Covid-19 epidemic and only recently discovered that face masks are not part of the human face. <br/><img src=mask.gif class="avatar_hobby"/></p>
+    <u>What do I do in my free time?</u>
+    <br/>
+    I love football, karaoke, and partying in the dog parks. 
+    <br/>
+    <img src=football.jpg class="avatar_hobby"/>
+    <p><u>What's the most exciting part of my day?</u>
+    <br/>
+    The moment Dad or Mom collects my feces on the city streets.
+    <br/>
+    <img src=kaki.jpg class="avatar_hobby"/>
+  </p>
+    <p><u>What annoys me?</u>
+    <br/>
+    Walt food couriers think I'm Dogo Argentino and that's driving me crazy.<br/>
+    <img src=crazy.gif class="avatar_hobby"/></p>
+    <br/>
+    <p><u>What do I want to be when I grow up?</u>
+    <br/>
+    I'm realistic so my dream is to be an ice cream seller in the mornings and pirate at nights<br/><img src=pi.png class="avatar_hobby"/></p>
+
   </h2>
-  <br/>
   <br/>
   <br/>
 </section>
@@ -46,24 +73,11 @@
   <br/>
   <br/>
   <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
   <h1>
     my photos
   </h1>
   <div class="row">
     <div class="column">
-      <img src="WhatsApp Video 2022-04-20 at 13.55.55.gif">
       <img src="la_familia.jpeg">
       <img src="hilik.jpg">
       <img src="PHOTO-2021-07-17-16-32-00.jpg">
@@ -102,20 +116,7 @@
 </section>
 
 <section id="playlist" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+
 <br/>
 <br/>
 <h1>
@@ -123,6 +124,8 @@ my playlist
 </h1>
 <br/>
 <br/>
+
+<iframe width="760" height="475" style="float:center" src="https://www.youtube.com/watch?v=Qkuu0Lwb5EM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br/>
 <br/>
 </section>
 
@@ -144,13 +147,13 @@ give me a like
 <br/>
 </h1>
 </section>
-
+<h3>
+  <br/>
+  <br/>
+  <img src=s1.jpeg class="avatar_header"/><img src=s2.jpeg class="avatar_header"/><img src=s3.jpeg class="avatar_header"/><img src=s4.jpeg class="avatar_header"/><img src=s5.jpeg class="avatar_header"/><img src=s6.jpeg class="avatar_header"/><img src=s7.jpeg class="avatar_header"/>
+</h3>
 <section id="qrcoder" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+
 <h1>scan my code <br/> <img src=QR.jpg class="QR"/></h1>
 </section>
 
