--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     about me
   </h1>
   <h2>
-    <p>Hello bitches, my name is <u>Ivar</u><br/>I'm a year and a half old. My family broke up when I was two and a half<br/>months old and I do not know where my biological siblings are<img src=photos\old_times.jpeg class="avatar_text"/>
-      <br/><img src=photos\momi.jpg class="avatar_text"/>Koral ("Korahel") and Ran<img src=photos\dad.jpeg class="avatar_text"/> took me under their wing and now I have a prince's life!
+    <p>Yo bitches, my name is <u>Ivar</u><br/>I'm a year and a half old. My family broke up when I was two and a half<br/>months old and I do not know where my biological siblings are<img src=photos\old_times.jpeg class="avatar_text"/>
+      <br/><img src=photos\momi.JPG class="avatar_text"/>Koral ("Korahel") and Ran<img src=photos\dad.jpeg class="avatar_text"/> took me under their wing and now I have a prince's life!
     <br/><u>I have 3 stepbrothers:</u>
     <br/><img src=photos\hilik_f1.jpg class="avatar_text"/>Hilik (German Shepherd) <img src=photos\face_hilik.jpg class="avatar_text"/><br/>
     <img src=photos\Inkedshula_love_LI.jpg class="avatar_text"/>Shula (Boston Terrier)<img src=photos\sul.jpeg class="avatar_text"/><br/>
@@ -123,16 +123,14 @@
 my playlist
 </h1>
 <br/>
-<br/>
-
-<iframe width="760" height="475" style="float:center" src="https://www.youtube.com/watch?v=Qkuu0Lwb5EM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br/>
-<br/>
+<div class="container">
+  <div class="vertical-center">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Qkuu0Lwb5EM?start=18" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</div>    
 </section>
 
 <section id="like" class="section">
-<br/>
-<br/>
-<br/>
 <br/>
 <br/>
 <h1>
