--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <img src=photos\hatul_f1.jpg class="avatar_text"/>"Hatul"  RIP (Gangster Cat)<img src=photos\hatul_face.jpg class="avatar_text"/></p>
     <br/>
     <p><u>Something interesting that is important to know about me:</u>
-    <br/>I was born right at the beginning of the Covid-19 epidemic and only recently discovered that face masks are not part of the human face. <br/><img src=photos\mask.gif class="avatar_hobby"/></p>
+    <br/>I was born right at the beginning of the Covid-19 epidemic and only recently discovered that face masks are not part of the human face. <br/><img src=photos\mask.GIF class="avatar_hobby"/></p>
     <u>What do I do in my free time?</u>
     <br/>
     I love football, karaoke, and partying in the dog parks. 
@@ -52,16 +52,16 @@
     <br/>
     The moment Dad or Mom collects my feces on the city streets.
     <br/>
-    <img src=photos\kaki.jpg class="avatar_hobby"/>
+    <img src=photos\kaki.JPG class="avatar_hobby"/>
   </p>
     <p><u>What annoys me?</u>
     <br/>
     Walt food couriers think I'm Dogo Argentino and that's driving me crazy.<br/>
-    <img src=photos\crazy.gif class="avatar_hobby"/></p>
+    <img src=photos\crazy.GIF class="avatar_hobby"/></p>
     <br/>
     <p><u>What do I want to be when I grow up?</u>
     <br/>
-    I'm realistic so my dream is to be an ice cream seller in the mornings and pirate at nights<br/><img src=photos\pi.png class="avatar_hobby"/></p>
+    I'm realistic so my dream is to be an ice cream seller in the mornings and pirate at nights<br/><img src=photos\pi.PNG class="avatar_hobby"/></p>
 
   </h2>
   <br/>
