answer and title

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="try.css" />
+<title>Ivar is looking for love</title>
 </head>
 <body>
 <div id="menu">
@@ -151,11 +152,11 @@ give me a like
 </div>
 </section>
 <h3>
-  <br/>
   <img src=photos\s1.jpeg class="avatar_header"/><img src=photos\s2.jpeg class="avatar_header"/><img src=photos\s3.jpeg class="avatar_header"/><img src=photos\s4.jpeg class="avatar_header"/><img src=photos\s5.jpeg class="avatar_header"/><img src=photos\s6.jpeg class="avatar_header"/><img src=photos\s7.jpeg class="avatar_header"/>
 </h3>
 <section id="qrcoder" class="section">
-
+<br/>
+<br/>
 <h1>scan my code <br/> <img src=QR.jpg class="QR"/></h1>
 </section>
 
@@ -163,41 +164,57 @@ give me a like
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
 <h1>
-ans
+  ans
 </h1>
 <br/>
 <br/>
+<table style="width:80%">
+  <tr>
+    <td></td>
+    <th><u>Web 1</u></th>
+    <th><u>Web 2</u></th>
+    <th><u>Web 3</u></th>
+  </tr>
+  <tr>
+    <th>1&emsp;<br/></th>
+    <td>static web pages , read only</td>
+    <td>dynamic web pages , read-write</td>
+    <td>read-write-execute</td>
+  </tr>
+  <tr>
+    <th>2&emsp;</th>
+    <td>Company Focus - companies are responsible for publishing content that people consume </td>
+    <td>Community Focus - People are responsible for publishing content that designed for consumption by other people or companies build platforms that allow people to post content</td>
+    <td>Individual Focus - People are building apps that people can communicate with, Companies (or individuals) can build platforms that allow people to advertise services that leverage relationships between people</td>
+  </tr>
+  <tr>
+    <th>3&emsp;</th>
+    <td>Searching for sites or content is relatively slow, difficulty in searching and retrieving information and therefore poor search results</td>
+    <td>Searching and retrieving information is done faster and the results are higher quality and accurate than in "Web 1"</td>
+    <td>Large amount of information, huge improvement in information retrieval speed. Information retrieval is accurate and relevant to most queries</td>
+  </tr>
+</table>
+<br/>
+<br/>
+<table style="width: 80%;">
+  <tr>
+    <th>Web 1</th>
+    <td>In order to search for the query "side effects of drugs" it is necessary to enter the exact address of the site and it is not possible to use a search engine.</td>
+  </tr>
+  <tr>
+    <th>Web 2</th>
+    <td>In order to search for the query "side effects of drugs" it is possible to search using a search engine, several results will be returned but there is a situation where some of the results will not be relevant to a specific user, no personal customization.</td>
+  </tr>
+  <tr>
+    <th>Web 3</th>
+    <td>In order to search for the query "side effects of drugs" it is possible to search using a search engine, the results returned will be relevant to its query and customized to the user who performed the search.</td>
+  </tr>
+</table>
 <br/>
 </section>
 
 <section id="contact" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
 <br/>
 <br/>
 <br/>
