--- a/index.html
+++ b/index.html
@@ -217,10 +217,20 @@ give me a like
 <section id="contact" class="section">
 <br/>
 <br/>
-<br/>
 <h1>
 contact me
 </h1>
+<h2>
+  <form action="mailto:omriman11@gmail.com" method="post" enctype="text/plain">
+    Name:<br>
+    <input type="text" name="name" size="50" ><br>
+    E-mail:<br>
+    <input type="text" name="mail"><br>
+    Comment:<br>
+    <input type="text" name="comment" size="50"><br><br>
+    <input type="submit" value="Send">
+    <input type="reset" value="Reset">
+</h2>
 <br/>
 <br/>
 <br/>
