--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
 <head>
 <link rel="stylesheet" type="text/css" href="try.css" />
 <title>Ivar is looking for love</title>
+
+<!-- https://www.tiny.cloud/blog/emoji-picker/ -->
+<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+<script>
+  tinymce.init({
+    selector: "#mytextarea",
+    plugins: "emoticons",
+    toolbar: "emoticons",
+    toolbar_location: "bottom",
+    // https://www.tiny.cloud/docs/configure/editor-appearance/#menubar
+    menubar:false,
+    branding: false,
+    block_formats: 'Paragraph='
+    // 
+    
+  });
+</script>
+<!--  -->
 </head>
 <body>
 <div id="menu">
@@ -221,15 +239,24 @@ give me a like
 contact me
 </h1>
 <h2>
-  <form action="mailto:omriman11@gmail.com" method="post" enctype="text/plain">
-    Name:<br>
-    <input type="text" name="name" size="50" ><br>
-    E-mail:<br>
-    <input type="text" name="mail"><br>
-    Comment:<br>
-    <input type="text" name="comment" size="50"><br><br>
-    <input type="submit" value="Send">
-    <input type="reset" value="Reset">
+  <table style="width: 80%; border:1px solid #e1b382;">
+    <form action="mailto:manomri@post.bgu.ac.il" method="post" enctype="text/plain">
+    <tr>
+      <td>Name:<br> <input type="text" name="My name is" placeholder="e.g Yaniv Katan"><br></td>
+    </tr>
+    <tr>
+      <td>E-mail: <br><input type="text"  placeholder="e.g YanivKatan20@TheKing.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"><br></td>
+    </tr>
+    <tr>
+      <td>Comment: <br><textarea id="mytextarea" name="My massage is: " placeholder="e.g Hi Ivar, U R the best dog ever and I love U, but..." ></textarea></td>
+    </tr>
+    <tr>
+      <td><input type="submit" value="Send"></td>
+    </tr>
+    <tr>
+      <td><input type="reset" value="Reset"></td>
+    </tr>
+  </table>
 </h2>
 <br/>
 <br/>
