--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 <div id="menu">
 <ul>
-<img src=photos\face.jpg style="float:left" class="avatar"/>
+<a href="#menu" ><img src=photos\face.jpg style="float:left" class="avatar"/></a>
 <li><a href="#about">About Me</a></li>
 <li><a href="#photos">My Photos</a></li>
 <li><a href="#playlist">My Playlist</a></li>
@@ -38,27 +38,58 @@
 <li style="float:right"><a href="#contact">Contact Me</a></li>
 </ul>
 </div>
-<section id="head of header" class="section">
 <br/>
 <h3>
   <br/>
   <br/>
-  <img src=photos\s1.jpeg class="avatar_header"/><img src=photos\s2.jpeg class="avatar_header"/><img src=photos\s3.jpeg class="avatar_header"/><img src=photos\s4.jpeg class="avatar_header"/><img src=photos\s5.jpeg class="avatar_header"/><img src=photos\s6.jpeg class="avatar_header"/><img src=photos\s7.jpeg class="avatar_header"/>
+  <!-- <img src=photos\s1.jpeg class="avatar_header"/><img src=photos\s2.jpeg class="avatar_header"/><img src=photos\s3.jpeg class="avatar_header"/><img src=photos\s4.jpeg class="avatar_header"/><img src=photos\s5.jpeg class="avatar_header"/><img src=photos\s6.jpeg class="avatar_header"/><img src=photos\s7.jpeg class="avatar_header"/> -->
+  <br/>
 </h3>
 </section>	  
 <section id="about" class="section">
   <br/>
   <br/>
   <h1>
-    about me
+    about me 
   </h1>
   <h2>
-    <p>Yo bitches, my name is <u>Ivar</u><br/>I'm a year and a half old. My family broke up when I was two and a half<br/>months old and I do not know where my biological siblings are<img src=photos\old_times.jpeg class="avatar_text"/>
+    <div class="cube-container">
+      <div class="cube">
+        <div class="cube__face front"></div>
+        <div class="cube__face back"></div>
+        <div class="cube__face right"></div>
+        <div class="cube__face left"></div>
+        <div class="cube__face top"></div>
+        <div class="cube__face bottom"></div>
+      </div>
+    </div>
+      <div class="cube-container">
+      <div class="cube">
+        <div class="cube__face front1"></div>
+        <div class="cube__face back1"></div>
+        <div class="cube__face right1"></div>
+        <div class="cube__face left1"></div>
+        <div class="cube__face top1"></div>
+        <div class="cube__face bottom1"></div>
+      </div>
+    </div>
+      </div>
+      <div class="cube-container">
+      <div class="cube">
+        <div class="cube__face front2"></div>
+        <div class="cube__face back2"></div>
+        <div class="cube__face right2"></div>
+        <div class="cube__face left2"></div>
+        <div class="cube__face top2"></div>
+        <div class="cube__face bottom2"></div>
+      </div>
+    </div>
+    <br>Yo bitches, my name is <u>Ivar</u><br/>I'm a year and a half old. My family broke up when I was two and a half<br/>months old and I do not know where my biological siblings are<img src=photos\old_times.jpeg class="avatar_text"/>
       <br/><img src=photos\momi.JPG class="avatar_text"/>Koral ("Korahel") and Ran<img src=photos\dad.jpeg class="avatar_text"/> took me under their wing and now I have a prince's life!
     <br/><u>I have 3 stepbrothers:</u>
     <br/><img src=photos\hilik_f1.jpg class="avatar_text"/>Hilik (German Shepherd) <img src=photos\face_hilik.jpg class="avatar_text"/><br/>
     <img src=photos\Inkedshula_love_LI.jpg class="avatar_text"/>Shula (Boston Terrier)<img src=photos\sul.jpeg class="avatar_text"/><br/>
-    <img src=photos\hatul_f1.jpg class="avatar_text"/>"Hatul"  RIP (Gangster Cat)<img src=photos\hatul_face.jpg class="avatar_text"/></p>
+    <img src=photos\hatul_f1.jpg class="avatar_text"/>"Hatul"  RIP (Gangster Cat)<img src=photos\hatul_face.jpg class="avatar_text"/>
     <br/>
     <p><u>Something interesting that is important to know about me:</u>
     <br/>I was born right at the beginning of the Covid-19 epidemic and only recently discovered that face masks are not part of the human face. <br/><img src=photos\mask.GIF class="avatar_hobby"/></p>
@@ -77,7 +108,7 @@
     <br/>
     Walt food couriers think I'm Dogo Argentino and that's driving me crazy.<br/>
     <img src=photos\crazy.GIF class="avatar_hobby"/></p>
-    <br/>
+
     <p><u>What do I want to be when I grow up?</u>
     <br/>
     I'm realistic so my dream is to be an ice cream seller in the mornings and pirate at nights<br/><img src=photos\pi.PNG class="avatar_hobby"/></p>
@@ -93,7 +124,9 @@
   <br/>
   <br/>
   <h1>
-    my photos
+    <img src=photos\s1.jpeg class="avatar_text"/><img src=photos\s2.jpeg class="avatar_text"/><img src=photos\s3.jpeg class="avatar_text"/>
+    &emsp;my photos&emsp;
+    <img src=photos\s5.jpeg class="avatar_text"/><img src=photos\s6.jpeg class="avatar_text"/><img src=photos\s7.jpeg class="avatar_text"/>
   </h1>
   <div class="row">
     <div class="column">
@@ -139,7 +172,9 @@
 <br/>
 <br/>
 <h1>
-my playlist
+  <img src=photos\s1.jpeg class="avatar_text"/><img src=photos\s2.jpeg class="avatar_text"/><img src=photos\s3.jpeg class="avatar_text"/>
+  &emsp;my playlist&emsp;
+  <img src=photos\s5.jpeg class="avatar_text"/><img src=photos\s6.jpeg class="avatar_text"/><img src=photos\s7.jpeg class="avatar_text"/>
 </h1>
 <br/>
 <div class="container">
@@ -153,7 +188,9 @@ my playlist
 <br/>
 <br/>
 <h1>
-give me a like
+  <img src=photos\s1.jpeg class="avatar_text"/><img src=photos\s2.jpeg class="avatar_text"/><img src=photos\s3.jpeg class="avatar_text"/>
+  &emsp;give me a like&emsp;
+  <img src=photos\s5.jpeg class="avatar_text"/><img src=photos\s6.jpeg class="avatar_text"/><img src=photos\s7.jpeg class="avatar_text"/>
 <br/>
 <div class="fb-like" data-href="https://web-development-environments-2021.github.io/assignment1-OmriMan/" data-layout="button" data-action="like" data-size="large" data-share="false"></div>
 <div id="fb-root"></div>
@@ -170,12 +207,47 @@ give me a like
 </div>
 </section>
 <h3>
-  <img src=photos\s1.jpeg class="avatar_header"/><img src=photos\s2.jpeg class="avatar_header"/><img src=photos\s3.jpeg class="avatar_header"/><img src=photos\s4.jpeg class="avatar_header"/><img src=photos\s5.jpeg class="avatar_header"/><img src=photos\s6.jpeg class="avatar_header"/><img src=photos\s7.jpeg class="avatar_header"/>
+  <!-- <img src=photos\s1.jpeg class="avatar_header"/><img src=photos\s2.jpeg class="avatar_header"/><img src=photos\s3.jpeg class="avatar_header"/><img src=photos\s4.jpeg class="avatar_header"/><img src=photos\s5.jpeg class="avatar_header"/><img src=photos\s6.jpeg class="avatar_header"/><img src=photos\s7.jpeg class="avatar_header"/> -->
+  <div class="cube-container">
+    <div class="cube">
+      <div class="cube__face front"></div>
+      <div class="cube__face back"></div>
+      <div class="cube__face right"></div>
+      <div class="cube__face left"></div>
+      <div class="cube__face top"></div>
+      <div class="cube__face bottom"></div>
+    </div>
+  </div>
+    <div class="cube-container">
+    <div class="cube">
+      <div class="cube__face front1"></div>
+      <div class="cube__face back1"></div>
+      <div class="cube__face right1"></div>
+      <div class="cube__face left1"></div>
+      <div class="cube__face top1"></div>
+      <div class="cube__face bottom1"></div>
+    </div>
+  </div>
+    </div>
+    <div class="cube-container">
+    <div class="cube">
+      <div class="cube__face front2"></div>
+      <div class="cube__face back2"></div>
+      <div class="cube__face right2"></div>
+      <div class="cube__face left2"></div>
+      <div class="cube__face top2"></div>
+      <div class="cube__face bottom2"></div>
+    </div>
+  </div>
 </h3>
 <section id="qrcoder" class="section">
 <br/>
 <br/>
-<h1>scan my code <br/> <img src=QR.jpg class="QR"/></h1>
+<h1>
+  scan my code <br/> <img src=QR.jpg class="QR"/><br>
+  <img src=photos\s1.jpeg class="avatar_text"/><img src=photos\s2.jpeg class="avatar_text"/><img src=photos\s3.jpeg class="avatar_text"/>
+  <img src=photos\s5.jpeg class="avatar_text"/><img src=photos\s6.jpeg class="avatar_text"/><img src=photos\s7.jpeg class="avatar_text"/>
+</h1>
 </section>
 
 <section id="spa" class="section">
@@ -236,7 +308,9 @@ give me a like
 <br/>
 <br/>
 <h1>
-contact me
+  <img src=photos\s1.jpeg class="avatar_text"/><img src=photos\s2.jpeg class="avatar_text"/><img src=photos\s3.jpeg class="avatar_text"/>
+  &emsp;contact me&emsp;
+  <img src=photos\s5.jpeg class="avatar_text"/><img src=photos\s6.jpeg class="avatar_text"/><img src=photos\s7.jpeg class="avatar_text"/>
 </h1>
 <h2>
   <table style="width: 80%; border:1px solid #e1b382;">
