--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ $(function(){
       document.getElementById("face").src = "photos\\s1.jpeg";
     } else if(rand==2) {
       document.getElementById("pic").src = "photos\\football.jpg"; 
-      document.getElementById("face").src = "photos\\pi.png";
+      document.getElementById("face").src = "photos\\pi.PNG";
     } else {
       document.getElementById("pic").src = "photos\\ball.jpg"; 
       document.getElementById("face").src = "photos\\beach1.jpg";
