--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ $(function(){
 <script>
   function heyU() {
     let text;
-    let person = prompt("Good to see you here !\n Please enter your name:");
+    let person = prompt("Good to see you here !\n Let's try to break the ice, what's your name? ");
     if (person == null || person == "") {
       text = "I wonder why you did not want to tell us your name ... Playing yourself mysterious?";
     } else {
@@ -485,7 +485,7 @@ $(function(){
   function send_whatsapp() {
     window.open("https://wa.me/+972525216644", "_blank");
   }
-  
+
   </script>
 
 
