--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 <li><a href="#like">Like</a></li>
 <li><a href="#qrcoder">QR code</a></li>
 <li><a href="#spa">Q&A</a></li>
+<li><a href="#menu" id="user" onclick="heyU();" style="color: #f3e9d6;">Hi</a></li>
 <li style="float:right"><a><div class="fb-like" data-href="https://web-development-environments-2021.github.io/assignment1-OmriMan/" data-width="100" data-layout="button" data-action="like" data-size="large" data-share="true"></div> </a></li>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v13.0" nonce="eg2BO3O7"></script>
 <li style="float:right"><a href="#contact">Contact Me</a></li>
 </ul>
 <ul_down_right>
-  <!-- https://wa.me/+972525216644 -->
-  <div><a href="menu" onclick="send_whatsapp();"><img src="whatsapp_icon.jpg" class="avatar_scroll"/></a></div>
+  <div><a href="#menu" onclick="send_whatsapp();"><img src="whatsapp_icon.jpg" class="avatar_scroll"/></a></div>
   <div><a href="#like"><img src="like_logo.png" class="avatar_scroll"/></a></div>
   <div><a href="#contact"><img src="mail_logo.jpg" class="avatar_scroll"/></a></div>
   <div><a href="#qrcoder"><img src=QR.jpg class="avatar_text"/> </a></div>
@@ -346,6 +346,16 @@
     <th>Web 3</th>
     <td>In order to search for the query "side effects of drugs" it is possible to search using a search engine, the results returned will be relevant to its query and customized to the user who performed the search.</td>
   </tr>
+  <tr><td>        <div class="cube-container">
+    <div class="cube">
+      <div class="cube__face front"></div>
+      <div class="cube__face back"></div>
+      <div class="cube__face right"></div>
+      <div class="cube__face left"></div>
+      <div class="cube__face top"></div>
+      <div class="cube__face bottom"></div>
+    </div>
+  </div></td><td><div class="fly_face"></div></td></tr>
 </table>
 <br/>
 </section>
@@ -455,11 +465,13 @@ $(function(){
 <script>
   function heyU() {
     let text;
-    let person = prompt("Good to see you here !\n Let's try to break the ice, what's your name? ");
+    let person = prompt("Good to see you here !\n  What's your name? ");
     if (person == null || person == "") {
       text = "I wonder why you did not want to tell us your name ... Playing yourself mysterious?";
+      document.getElementById("user").innerHTML = "Hi anonymous user" ;
     } else {
       text = "Hello " + person + "! I hope you are ready for a once in a lifetime experience";
+      document.getElementById("user").innerHTML = "Hi " + person ;
     }
     document.getElementById("demo").innerHTML = text;
   }
