--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="try.css" />
+<link rel="stylesheet" type="text/css" href="style.css" />
 <title>Ivar is looking for love</title>
 
 <!-- https://www.tiny.cloud/blog/emoji-picker/ -->
